traducciones generales, tamaño y animación del herp

--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
 
 
   <div class="content content--highlight content--outro">
-    <h2 class="color_brand2 content__title">The <span>Call to Action</span> </h2>
+    <h2 class="color_brand2 content__title">
+      <span data-i18n="The Call"></span>
+      <span class="content__title_h2" data-i18n="to Action"></span> </h2>
     <h2 class="content__title">
       <span data-i18n="The Call"></span>
       <span class="content__title_h2" data-i18n="to Action"></span>
