color of traffic cdmx

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         </div>
         <div class="center-controls">
           <p class="text-large_M">
-            <mark class="hx hx-3" data-i18n="CDMX Traffic"></mark>
+
+
+            <mark class="hx-1 hx-2" data-i18n="CDMX Traffic"></mark>
           </p>
           <span id="hourLabel" class="hour">--:--</span>
           <input id="hourSlider" type="range" min="0" max="23" step="1">
