arreglos en el call to action

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </h2>
       <p class="content__text content__text--left text-meta" data-i18n="text of and Partnership"></p>
     </div>
-    
+
     <div class="content content--sticky content--grid bg-7">
       <img class="content__img content__img--large content__img--left" src="img/8.png" />
       <h2 class="content__title titlle-7">
@@ -198,11 +198,14 @@
       <span data-i18n="The Call"></span>
       <span class="content__title_h2" data-i18n="to Action"></span>
     </h2>
+   
     <p class="text-large_w" data-i18n="text of the to Action">
     </p>
     <br><br>
-    <p class="text-large_w"> <mark class="hx hx-3" data-i18n="text 2 of the to Action"></mark> </p>
+    <p class="text-large_M"> <mark class="hx hx-3" data-i18n="text 2 of the to Action"></mark> </p>
     </p>
+
+
     <img class="content__img spacer" src="img/Brand_INDIx.svg" />
   </div>
   <footer id="contact">
