solucion de los svg´s

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <div class="wrap">
     <div class=" content content--sticky content--grid bg-1">
-      <div  class ="color_brand" id="circle_arrow" style="width: 100%; height: 100%;"></div>
+      <div  class ="color_brand content__img content__img--large content__img--left" id="circle_arrow"></div>
       <script src="js/demo4/1_animation.js"></script>
       <h2 class="content__title titlle-1">
         <span data-i18n="Technology as a Force for"></span>
