--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 
     <nav class="menu-right">
 
-            <script src="js/demo4/animation_brand.js"></script>
                       <script src="js/demo4/aire_cdmx.js"></script>
 
 
@@ -66,8 +65,20 @@
       <button id="lang-toggle" class="lang-btn">ES</button>
     </nav>
   </header>
-  <script src="js/demo4/scroll_animation.js"></script>
-  <!-- Sección brand: reloj + mapa -->
+
+
+<!-- Sección brand -->  
+<section class="brand">
+<script src="js/demo4/animation_brand.js"></script>
+</section>
+
+
+
+
+
+<section class="map">
+
+ <script src="js/demo4/scroll_animation.js"></script>
   <div id="brand" class="layout">
     <script src="js/demo4/animation_hero.js"></script>
     
@@ -101,11 +112,14 @@
       <div id="svg-container1" class="svg-container"></div>
       <div id="svg-container2" class="svg-container"></div>
     </div>
-  </div>
+  </div> 
 
 
 
   <script src="js/demo4/script_map.js"></script>
+
+  </section>
+
 
 
 
