--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
   <script type="module" src="js/demo4/index.js"></script>
 
 </head>
+<main>
+    <div class="frame frame--header">
+      <div class="frame__heading">
+      </div>
+    </div>
+  </main>
 
 <body class="loading demo-4">
   <!-- Loader -->
