--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
       <div id="svg-container2" class="svg-container"></div>
 
       <!-- Hora al final -->
-      <div id="prueba" class="time-ctrl">
+      <!-- <div id="prueba" class="time-ctrl">
         <div class="corner-icon top-left">
           <img id="svg1" class="icon1" src="img/bran-icon-01.svg" alt="Icono inicio">
-        </div>
+        </div> -->
 
         <div class="center-controls">
           <p class="text-large_M">
@@ -121,9 +121,9 @@
           <input id="hourSlider" type="range" min="0" max="23" step="1">
         </div>
 
-        <div class="corner-icon bottom-right">
+        <!-- <div class="corner-icon bottom-right">
           <img id="svg2" class="icon1" src="img/bran-icon-02.svg" alt="Icono final">
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
