--- a/index.html
+++ b/index.html
@@ -30,12 +30,25 @@
   <script type="module" src="js/demo4/index.js"></script>
 
 </head>
-<main>
-  <div class="frame frame--header">
-    <div class="frame__heading">
-    </div>
-  </div>
-</main>
+
+
+
+<!-- Sidebar/menu -->
+<div class="layout">
+  <header class="sidebar" id="site-header">
+    <div id="svg-container"></div>
+    <nav class="menu-right">
+      <script src="js/demo4/aire_cdmx.js"></script>
+      <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
+      <a href="#container" class="menu__item" data-i18n="menu about"></a>
+      <a href="#" class="menu__item" data-i18n="menu projects"></a>
+      <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
+      <button id="lang-toggle" class="lang-btn">ES</button>
+    </nav>
+  </header>
+</div>
+
+
 
 <body class="loading demo-4">
   <!-- Loader -->
@@ -53,80 +66,69 @@
       <img id="svg4" class="icon4" src="img/bran-icon-02.svg" alt="Icono final">
     </div>
   </div>
-  <!-- Header -->
-  <header id="site-header">
-    <div id="svg-container"></div>
-
-    <nav class="menu-right">
-
-      <script src="js/demo4/aire_cdmx.js"></script>
 
 
-
-
-      <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
-      <a href="#container" class="menu__item" data-i18n="menu about"></a>
-      <a href="#" class="menu__item" data-i18n="menu projects"></a>
-      <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
-      <button id="lang-toggle" class="lang-btn">ES</button>
-    </nav>
-  </header>
-
-
-  <!-- Sección brand -->
-  <section class="brand">
-
-
-    <script src="js/demo4/animation_brand.js"></script>
-  </section>
-
-
-
-
-
-<section class="map">
-  <div id="brand" class="layout">
-    <!-- COLUMNA IZQUIERDA -->
-    <div class="left-column">
-      <!-- Texto e íconos -->
-      <div class="content-row">
-        <img id="svgStart" class="city-icon" src="img/bran-icon-01.svg" data-i18n="icon_start_alt" alt="">
-        <div class="content content--highlight content--intro">
-          <p class="text-large_w">
-            <mark class="hx hx-3" data-i18n="hero_highlighted_text"></mark>
-            <span data-i18n="hero_intro_text"></span>
-          </p>
-        </div>
-        <img id="svgEnd" class="city-icon" src="img/bran-icon-02.svg" alt="" data-i18n="icon_end_alt">
+  <main>
+    <div class="frame frame--header">
+      <div class="frame__heading">
       </div>
     </div>
+  </main>
 
-    <!-- COLUMNA DERECHA -->
-    <div class="right-column">
-      <!-- MAPA -->
-      <div id="svg-container1" class="svg-container"></div>
-      <div id="svg-container2" class="svg-container"></div>
 
-      <!-- Hora al final -->
-      <!-- <div id="prueba" class="time-ctrl">
+
+
+
+    <!-- Sección brand -->
+    <section class="brand">
+      <script src="js/demo4/animation_brand.js"></script>
+    </section>
+
+
+    <!-- Sección map -->
+
+    <section class="map main-content">
+      <div id="brand" class="layout">
+        <!-- COLUMNA IZQUIERDA -->
+        <div class="left-column">
+          <!-- Texto e íconos -->
+          <div class="content-row">
+            <img id="svgStart" class="city-icon" src="img/bran-icon-01.svg" data-i18n="icon_start_alt" alt="">
+            <div class="content content--highlight content--intro">
+              <p class="text-large_w">
+                <mark class="hx hx-3" data-i18n="hero_highlighted_text"></mark>
+                <span data-i18n="hero_intro_text"></span>
+              </p>
+            </div>
+            <img id="svgEnd" class="city-icon" src="img/bran-icon-02.svg" alt="" data-i18n="icon_end_alt">
+          </div>
+        </div>
+
+        <!-- COLUMNA DERECHA -->
+        <div class="right-column">
+          <!-- MAPA -->
+          <div id="svg-container1" class="svg-container"></div>
+          <div id="svg-container2" class="svg-container"></div>
+
+          <!-- Hora al final -->
+          <!-- <div id="prueba" class="time-ctrl">
         <div class="corner-icon top-left">
           <img id="svg1" class="icon1" src="img/bran-icon-01.svg" alt="Icono inicio">
         </div> -->
 
-        <div class="center-controls">
-          <p class="text-large_M">
-            <mark class="hx-1 hx-2" data-i18n="CDMX Traffic"></mark>
-          </p>
-          <span id="hourLabel" class="hour">--:--</span>
-          <input id="hourSlider" type="range" min="0" max="23" step="1">
-        </div>
+          <div class="center-controls">
+            <p class="text-large_M">
+              <mark class="hx-1 hx-2" data-i18n="CDMX Traffic"></mark>
+            </p>
+            <span id="hourLabel" class="hour">--:--</span>
+            <input id="hourSlider" type="range" min="0" max="23" step="1">
+          </div>
 
-        <!-- <div class="corner-icon bottom-right">
+          <!-- <div class="corner-icon bottom-right">
           <img id="svg2" class="icon1" src="img/bran-icon-02.svg" alt="Icono final">
         </div> -->
+        </div>
       </div>
-    </div>
-  </div>
 
 
   <script src="js/demo4/scroll_animation.js"></script>
@@ -158,8 +160,8 @@
   <!-- Sticky content -->
 
 
-  <div class="wrap">
-    <div class=" content content--sticky content--grid bg-1">
+  <div class="wrap ">
+    <div class="content content--sticky content--grid bg-1">
       <div class="color_brand content__img content__img--large content__img--left" id="circle_arrow"></div>
       <script src="js/demo4/1_animation.js"></script>
       <h2 class="content__title titlle-1">
@@ -291,6 +293,8 @@
       </div>
     </div>
   </footer>
+  </div>
+
   <script src="js/imagesloaded.pkgd.min.js"></script>
 </body>
 
