--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <meta name="author" content="Codrops" />
   <link rel="shortcut icon" href="ico-01.png" />
   <!-- Fuentes -->
-  <link rel="stylesheet" href="https://use.typekit.net/lsf5xpv.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=B612:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-    rel="stylesheet" />
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fontfaceobserver/2.1.0/fontfaceobserver.standalone.js"></script>
   <!-- Estilos propios y Font Awesome -->
   <link rel="stylesheet" href="css/base.css" />
@@ -87,7 +85,7 @@
 
     <!-- Sección map -->
 
-    <section class="map main-content">
+    <section id="map" class="map main-content">
       <div id="brand" class="layout">
         <!-- COLUMNA IZQUIERDA -->
         <div class="left-column">
