arreglos del leyoot

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
   <!-- Lógica modular -->
   <script type="module" src="js/demo4/loading.js"></script>
   <script type="module" src="js/demo4/index.js"></script>
-
 </head>
-
-
-
 <!-- Sidebar/menu -->
 <div class="layout">
   <header class="sidebar" id="site-header">
@@ -45,9 +41,6 @@
     </nav>
   </header>
 </div>
-
-
-
 <body class="loading demo-4">
   <!-- Loader -->
   <div id="loader-overlay">
@@ -64,27 +57,17 @@
       <img id="svg4" class="icon4" src="img/bran-icon-02.svg" alt="Icono final">
     </div>
   </div>
-
-
   <main>
     <div class="frame frame--header">
       <div class="frame__heading">
       </div>
     </div>
   </main>
-
-
-
-
-
     <!-- Sección brand -->
     <section class="brand">
       <script src="js/demo4/animation_brand.js"></script>
     </section>
-
-
     <!-- Sección map -->
-
     <section id="map" class="map main-content">
       <div id="brand" class="layout">
         <!-- COLUMNA IZQUIERDA -->
@@ -127,19 +110,12 @@
         </div> -->
         </div>
       </div>
-
-
   <script src="js/demo4/scroll_animation.js"></script>
   <script src="js/demo4/animation_hero.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="js/demo4/script_map.js"></script>
   </section>
-
-
-
-
-
-  <!-- Hero section -->
+<!-- Hero section -->
   <!-- <section id="container" class="hero">
     <div class="content-row">
       <img id="svgStart" class="city-icon" src="img/bran-icon-01.svg" data-i18n="icon_start_alt" alt="">
@@ -156,72 +132,127 @@
   <script src="js/demo4/ramdon_color.js"></script>
 
   <!-- Sticky content -->
-
-
   <div class="wrap ">
-    <div class="content content--sticky content--grid bg-1">
-      <div class="color_brand content__img content__img--large content__img--left" id="circle_arrow"></div>
-      <script src="js/demo4/1_animation.js"></script>
+
+
+
+
+    <div class="content content--sticky bg-1">
+  <div class="content__grid">
+    <div class="content__textual">
       <h2 class="content__title titlle-1">
         <span data-i18n="Technology as a Force for"></span>
         <span class="content__title_h2" data-i18n="Human Potential"></span>
       </h2>
-      <p class="content__text content__text--left text-meta" data-i18n="text of Human Potential"></p>
+      <p class="content__text text-meta" data-i18n="text of Human Potential"></p>
     </div>
+    <div class="content__img-wrapper">
+      <div class="color_brand content__img content__img--large" id="circle_arrow"></div>
+      <script src="js/demo4/1_animation.js"></script>
 
-    <div class="content content--sticky content--grid bg-2">
-      <img class="content__img content__img--large content__img--left" src="img/10.png" />
+    </div>
+  </div>
+</div>
+
+
+
+
+    <!-- BG 2 -->
+<div class="content content--sticky bg-2">
+  <div class="content__grid">
+    <div class="content__textual">
       <h2 class="content__title titlle-2">
         <span data-i18n="Experimentation"></span>
         <span class="content__title_h2" data-i18n="The Pathway to Innovation"></span>
       </h2>
-      <p class="content__text content__text--left text-meta" data-i18n="text of The Pathway to Innovation"></p>
+      <p class="content__text text-meta" data-i18n="text of The Pathway to Innovation"></p>
     </div>
+    <div class="content__img-wrapper">
+      <img class="content__img content__img--large" src="img/10.png" alt="Innovation image" />
+    </div>
+  </div>
+</div>
 
-    <div class="content content--sticky content--grid bg-3">
-      <img class="content__img content__img--large content__img--left" src="img/11.png" />
+<!-- BG 3 -->
+<div class="content content--sticky bg-3">
+  <div class="content__grid">
+    <div class="content__textual">
       <h2 class="content__title titlle-3">
         <span data-i18n="Harnessing"></span>
         <span class="content__title_h2" data-i18n="Collective Wisdom"></span>
       </h2>
-      <p class="content__text content__text--left text-meta" data-i18n="text of the Collective Wisdom"></p>
+      <p class="content__text text-meta" data-i18n="text of the Collective Wisdom"></p>
     </div>
+    <div class="content__img-wrapper">
+      <img class="content__img content__img--large" src="img/11.png" alt="Collective Wisdom" />
+    </div>
+  </div>
+</div>
 
-    <div class="content content--sticky content--grid bg-4">
-      <img class="content__img content__img--large content__img--left" src="img/12.png" />
+<!-- BG 4 -->
+<div class="content content--sticky bg-4">
+  <div class="content__grid">
+    <div class="content__textual">
       <h2 class="content__title titlle-4">
         <span data-i18n="Public-Private Cooperation"></span>
         <span class="content__title_h2" data-i18n="A Shared Responsibility"></span>
       </h2>
-      <p class="content__text content__text--left text-meta" data-i18n="text of the A Shared Responsibility"></p>
+      <p class="content__text text-meta" data-i18n="text of the A Shared Responsibility"></p>
     </div>
+    <div class="content__img-wrapper">
+      <img class="content__img content__img--large" src="img/12.png" alt="Shared Responsibility" />
+    </div>
+  </div>
+</div>
 
-    <div class="content content--sticky content--grid bg-5">
-      <img class="content__img content__img--large content__img--left" src="img/8.png" />
+<!-- BG 5 -->
+<div class="content content--sticky bg-5">
+  <div class="content__grid">
+    <div class="content__textual">
       <h2 class="content__title titlle-5">
         <span data-i18n="A Fluid"></span>
         <span class="content__title_h2" data-i18n="and Responsive Agenda"></span>
       </h2>
-      <p class="content__text content__text--left text-meta" data-i18n="text of the and Responsive Agenda"></p>
+      <p class="content__text text-meta" data-i18n="text of the and Responsive Agenda"></p>
     </div>
+    <div class="content__img-wrapper">
+      <img class="content__img content__img--large" src="img/8.png" alt="Responsive Agenda" />
+    </div>
+  </div>
+</div>
 
-    <div class="content content--sticky content--grid bg-6">
-      <img class="content__img content__img--large content__img--left" src="img/9.png" />
+<!-- BG 6 -->
+<div class="content content--sticky bg-6">
+  <div class="content__grid">
+    <div class="content__textual">
       <h2 class="content__title titlle-6">
         <span data-i18n="Collaboration"></span>
         <span class="content__title_h2" data-i18n="and Partnership"></span>
       </h2>
-      <p class="content__text content__text--left text-meta" data-i18n="text of and Partnership"></p>
+      <p class="content__text text-meta" data-i18n="text of and Partnership"></p>
     </div>
+    <div class="content__img-wrapper">
+      <img class="content__img content__img--large" src="img/9.png" alt="Collaboration and Partnership" />
+    </div>
+  </div>
+</div>
 
-    <div class="content content--sticky content--grid bg-7">
-      <img class="content__img content__img--large content__img--left" src="img/8.png" />
+<!-- BG 7 -->
+<div class="content content--sticky bg-7">
+  <div class="content__grid">
+    <div class="content__textual">
       <h2 class="content__title titlle-7">
         <span data-i18n="An Identity Rooted"></span>
         <span class="content__title_h2" data-i18n="in Innovation"></span>
       </h2>
-      <p class="content__text content__text--left text-meta" data-i18n="text of the in Innovation"></p>
+      <p class="content__text text-meta" data-i18n="text of the in Innovation"></p>
     </div>
+    <div class="content__img-wrapper">
+      <img class="content__img content__img--large" src="img/8.png" alt="Innovation Identity" />
+    </div>
+  </div>
+</div>
+
   </div>
 
 
@@ -285,7 +316,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p class="text-meta">© 2023 INDIx. All rights reserved.</p>
+        <p class="text-meta">© 2025 INDIx. All rights reserved.</p>
         <p class="text-meta">Powered by <a href="https://www.grupoindi.com/" target="_blank"
             rel="noopener noreferrer">Grupo INDI</a></p>
       </div>
