--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
       <img id="svg4" class="icon4" src="img/bran-icon-02.svg" alt="Icono final">
     </div>
   </div>
+
+
+
+
+  
   <main>
     <div class="frame frame--header">
       <div class="frame__heading">
@@ -66,6 +71,7 @@
     <!-- Sección brand -->
     <section class="brand">
       <script src="js/demo4/animation_brand.js"></script>
+
     </section>
     <!-- Sección map -->
     <section id="map" class="map main-content">
@@ -84,6 +90,8 @@
             <img id="svgEnd" class="city-icon" src="img/bran-icon-02.svg" alt="" data-i18n="icon_end_alt">
           </div>
         </div>
+
+
 
         <!-- COLUMNA DERECHA -->
         <div class="right-column">
@@ -273,7 +281,7 @@
     </p>
 
 
-    <img class="content__img spacer" src="img/Brand_INDIx.svg" />
+    <!-- <img class="content__img spacer" src="img/Brand_INDIx.svg" /> -->
   </div>
   <footer id="contact">
     <div class="footer-container">
