--- a/index.html
+++ b/index.html
@@ -62,15 +62,7 @@
 
     <header class="sidebar" id="site-header">
       <div id="svg-container"></div>
-      <!-- menú-->
-      <!-- <nav class="menu-right">
-      <script src="js/demo4/aire_cdmx.js"></script>
-      <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
-      <a href="#container" class="menu__item" data-i18n="menu about"></a>
-      <a href="#" class="menu__item" data-i18n="menu projects"></a>
-      <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
-      <button id="lang-toggle" class="lang-btn">ES</button>
-    </nav> -->
+
     </header>
 
     <header id="site-header">
@@ -83,8 +75,7 @@
         <span></span>
       </button>
 
-      <!-- Menú desplegable -->
-      <!-- Menú desplegable -->
+
       <nav class="menu-fullscreen" id="fullscreen-menu">
         <button class="close-menu" id="close-menu" aria-label="Cerrar menú">✕</button>
 
@@ -93,16 +84,23 @@
         <a href="#" class="menu__item" data-i18n="menu projects"></a>
         <a href="#contact" class="menu__item" data-i18n="menu contact"></a>
         <button id="lang-toggle" class="lang-btn">ES</button>
+        <div class="social-icons">
+          <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+            <img class="redes-sociales" src="img/social_networt_icon/facebook.png">
+          </a>
+          <a href="https://x.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+            <img class="redes-sociales" src="img/social_networt_icon/twitter.png">
+          </a>
+          <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+            <img class="redes-sociales" src="img/social_networt_icon/linkedin.png">
+          </a>
+          <a href="https://instagran.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+            <img class="redes-sociales" src="img/social_networt_icon/instagram.png">
+          </a>
+        </div>
       </nav>
-
     </header>
-        <script src="js/demo4/menu.js"></script>
-
-
-   
-
-
-
+    <script src="js/demo4/menu.js"></script>
   </div>
 
 
@@ -372,7 +370,7 @@
         <h3>Dirección</h3>
         <p>Av. Reforma 123, Ciudad de México, México</p>
         <h3>Síguenos</h3>
-        <div class="social-icons">
+        <div class="social-icon">
           <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
             <svg width="24" height="24" fill="#4267B2" viewBox="0 0 24 24">
               <path
