animacion de menu, revisión de scroll

--- a/index.html
+++ b/index.html
@@ -65,9 +65,6 @@
 
     </header>
 
-    <header id="site-header">
-      <div id="svg-container"></div>
-
       <!-- Botón Hamburguesa -->
       <button class="hamburger" id="menu-toggle" aria-label="Abrir menú">
         <span></span>
@@ -99,6 +96,10 @@
           </a>
         </div>
       </nav>
+
+
+
+      <script src="js/demo4/gsap-menu.js">  </script>
     </header>
     <script src="js/demo4/menu.js"></script>
   </div>
@@ -136,9 +137,6 @@
 
       </script>
   </section>
-
-
-
 
   <!-- Sección map -->
   <section id="map" class="map main-content">
@@ -351,6 +349,8 @@
 
     <!-- <img class="content__img spacer" src="img/Brand_INDIx.svg" /> -->
   </div>
+
+
   <footer id="contact">
     <div class="footer-container">
       <div class="footer-contact-form">
